--- a/gb/18/9/28/n10749135.md
+++ b/gb/18/9/28/n10749135.md
@@ -1,16 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>林辉：邓小平女儿指北大曾变成法西斯集中营</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/09/20140506113238384-600x400.jpg" />
-<h6>北大的六十三名受难者，他们在文革中遭到迫害，被殴打、折磨致死，或者在遭到殴打和折磨后“自杀”。图为北大附中红卫兵斗校长。（网络图片）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2018年09月29日讯】邓小平的女儿邓榕在其所着的《我的父亲邓小平“文革”岁月》中有这样一段话，痛陈文革中的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8C%97%E5%A4%A7.md#1">北大</a>黑暗历史。其原文如下：</p>
-<p>“北京大学，这所中国最著名的学府，竟然变成了法西斯的集中营，变成了血腥暴徒们施虐的场所。在这里，不知有多少人被冤、被屈、被整、被迫害，不知有多少人在武斗、批斗、刑讯中致残、致死。一位教师不堪受侮辱被虐待，自觉生不如死，竟然一次不成二次，二次不成三次，三次不成四次，跳楼、服药、割腕、卧轨、触电什么方法都用过了，反复自杀。一位反对聂元梓的学生，被用钉子钉穿膝盖骨、用竹签刺进十指指甲缝、用钳子钳断手的指骨，还把人装进麻袋中从楼梯上往下踢，被毒刑拷打得奄奄一息。原<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8C%97%E5%A4%A7.md#1">北大</a>校党委书记、校长<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%99%86%E5%B9%B3.md#1">陆平</a>被用钢丝缠捆着两只手的大拇指，吊在天花板上逼供刑讯，让其承认是‘假党员’、‘叛徒’。著名哲学家冯定也被逼得三次自杀。以上这些，仅是例举。‘文革’期间，在北大，武斗中打死三人，教职员工和学生被迫害致死六十余人，其中包括著名历史学家翦伯赞、著名物理学家饶毓泰等诸多享有盛誉的一级教授。”</p>
+	<p>【大纪元2018年09月29日讯】邓小平的女儿邓榕在其所着的《我的父亲邓小平“文革”岁月》中有这样一段话，痛陈文革中的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8C%97%E5%A4%A7.md#1">北大</a>黑暗历史。其原文如下：</p>
+<p>“北京大学，这所中国最著名的学府，竟然变成了法西斯的集中营，变成了血腥暴徒们施虐的场所。在这里，不知有多少人被冤、被屈、被整、被迫害，不知有多少人在武斗、批斗、刑讯中致残、致死。一位教师不堪受侮辱被虐待，自觉生不如死，竟然一次不成二次，二次不成三次，三次不成四次，跳楼、服药、割腕、卧轨、触电什么方法都用过了，反复自杀。一位反对聂元梓的学生，被用钉子钉穿膝盖骨、用竹签刺进十指指甲缝、用钳子钳断手的指骨，还把人装进麻袋中从楼梯上往下踢，被毒刑拷打得奄奄一息。原<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8C%97%E5%A4%A7.md#1">北大</a>校党委书记、校长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%86%E5%B9%B3.md#1">陆平</a>被用钢丝缠捆着两只手的大拇指，吊在天花板上逼供刑讯，让其承认是‘假党员’、‘叛徒’。著名哲学家冯定也被逼得三次自杀。以上这些，仅是例举。‘文革’期间，在北大，武斗中打死三人，教职员工和学生被迫害致死六十余人，其中包括著名历史学家翦伯赞、著名物理学家饶毓泰等诸多享有盛誉的一级教授。”</p>
 <p>不长的一段话，就已经让人毛骨悚然，而这样迫害自己的校长、教师、员工的北大倒的确担得起“法西斯集中营”的名头。在笔者的印象中，有着这样名头的世界知名大学基本都在中国大陆。而让邓榕发出如此尖锐之声的一个原因是其全家在文革中的苦痛遭遇，尤其是身在北大的邓家长子邓朴方所遭到的迫害。</p>
 <h2><strong>邓朴方跳楼自杀落下终身残疾</strong></h2>
-<p>1962年，邓朴方考入北京大学物理系，在班上一直担任中共团支部书记。<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>爆发后，作为拥有红色血统的邓朴方也满怀热情的投入到其中，还被选为系文革小组副组长。但是不久后，邓小平也被打倒，而且是中共党内“第二号走资派”，邓家子女的厄运从此开始了。</p>
+<p>1962年，邓朴方考入北京大学物理系，在班上一直担任中共团支部书记。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>爆发后，作为拥有红色血统的邓朴方也满怀热情的投入到其中，还被选为系文革小组副组长。但是不久后，邓小平也被打倒，而且是中共党内“第二号走资派”，邓家子女的厄运从此开始了。</p>
 <p>邓朴方以及姐姐邓林和妹妹邓楠都在各自的学校受到了批判和管制，并要他们“揭发”父亲邓小平。在苦闷中，邓朴方喝上了酒，并能一口气喝上半瓶白酒。一天，他与好友散步到颐和园，坐在山腰的树林中，邓朴方又喝了一通酒，并在酒后直言，文革打倒这么多人，毛“必定要骑虎难下”，林彪、江青“不会有好下场的”。</p>
 <p>后来，邓朴方的言论在1968年文革中的“清理阶级队伍”阶段，被北大造反派掌握，并受到追查。邓朴方被打成了“反革命”，并被秘密关押在北大东门外那座灰色的大楼里。</p>
 <p>一天，邓朴方在北大广播站播放的新闻中，突然听到这样一则消息：经查获，“黑帮老大”邓小平的儿子、我校物理系学生邓朴方，与某某等人结为“反党小集团”。这对邓朴方是一个重大打击，他决定以死证明自己。</p>
@@ -19,14 +18,14 @@
 <p>据邓榕回忆，邓朴方摔伤后，“北大造反派也慌了。他们把邓朴方送到一家医院，医生一听是‘第二号走资派’的儿子，竟然拒绝治疗。此后一连送了几家医院都不收。……后来听说聂元梓急了，硬让与她同一派的北医三院收下了事。”</p>
 <p>此后，邓朴方下半身瘫痪，而他后来成为中国残联主席也是广为人知。据说邓小平对此事深感愧疚。</p>
 <h2><strong>北大三任校长被打倒</strong></h2>
-<p>邓榕言辞中提及的原北大校党委书记、校长<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%99%86%E5%B9%B3.md#1">陆平</a>，是在1957年10月至1960年3月任北京大学副校长的，1957年11月起任北大党委第一书记。在1960年，校长<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%A9%AC%E5%AF%85%E5%88%9D.md#1">马寅初</a>被批判被迫辞职后，陆平还兼任校长，直至1966年6月。</p>
+<p>邓榕言辞中提及的原北大校党委书记、校长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%86%E5%B9%B3.md#1">陆平</a>，是在1957年10月至1960年3月任北京大学副校长的，1957年11月起任北大党委第一书记。在1960年，校长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E5%AF%85%E5%88%9D.md#1">马寅初</a>被批判被迫辞职后，陆平还兼任校长，直至1966年6月。</p>
 <p>毕业于北大历史系的王曾瑜在《敬爱的马校长和可悲的陆平》（选自《那时我们正年轻——北京大学历史系校友回忆录》一书）一文中提到这样一件事：陆平来到北大后，要继续反右倾，在压力下，他增划了大量新“右派”，并将矛头指向时任北大副校长的邹鲁风。原来陆平和邹鲁风为了配合大跃进，曾派法律系毕业班组织一个调查组，结果调查报告的结论竟与彭德怀一致。反右倾开始，陆平就把调查组的右倾问题全盘推诿给邹鲁风，狠整的结果是邹鲁风自杀。</p>
 <p>按照王曾瑜的说法，他们这个阶段的北大人都对陆平存有恶感，因为他害了许多无辜者，耽误了不少人的学业。</p>
 <p>在反右倾中害了北大师生的陆平最终没有逃过文革。文革爆发后，陆平被从家中带走，据其女儿陆莹透露，陆平在北大生物楼被吊起来打得很厉害，以至于被打得大小便失禁。此外，还连续多少天不准睡觉，用强光灯泡照射眼睛。其后，陆平在工人体育场召开的十万人大会上被批斗，胸前挂着大牌子，坐“喷气式飞机”。在被连续批斗之余，陆平还不得不在校园从事除草，清扫垃圾之类的活计。之后，陆平被发配到江西农场劳改两年。</p>
 <p>陆平的家人自然也受到牵连，其妻子成了“与反革命分子划不清界限”的顽固分子，被隔离审查。儿子陆征也遭到同学的批斗，他“被用铁丝捆了，装进麻袋用马车拉走了”，还被打成了脑震荡。大女儿陆微徒步一个月去山西绛县插队，二女儿陆莹去云南插队。家里就剩下10岁的小女儿陆昀，还被学校推出校门。</p>
 <p>文革结束后，陆平被“平反”，但他很多年不能去北大，因为“见到未名湖就难受，是挨打挨批斗的地方”。</p>
-<p>除了陆平，1949年4月至1951年9月任校长的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B1%A4%E7%94%A8%E5%BD%A4.md#1">汤用彤</a>，1951年9月至1960年任校长的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%A9%AC%E5%AF%85%E5%88%9D.md#1">马寅初</a>，也都没逃过文革的风暴，没逃过中共对其的侮辱和迫害。</p>
-<p>学贯中西的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B1%A4%E7%94%A8%E5%BD%A4.md#1">汤用彤</a>当年因一念之差留在了大陆，出任首任北大校长。1954年汤用彤出席《人民日报》主持的胡适批判会后，回家后即患脑溢血；此后长期卧床，再无学术新成果。1964年3月他因心脏病发作住院治疗，5月病逝，终年71岁。</p>
+<p>除了陆平，1949年4月至1951年9月任校长的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%A4%E7%94%A8%E5%BD%A4.md#1">汤用彤</a>，1951年9月至1960年任校长的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E5%AF%85%E5%88%9D.md#1">马寅初</a>，也都没逃过文革的风暴，没逃过中共对其的侮辱和迫害。</p>
+<p>学贯中西的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%A4%E7%94%A8%E5%BD%A4.md#1">汤用彤</a>当年因一念之差留在了大陆，出任首任北大校长。1954年汤用彤出席《人民日报》主持的胡适批判会后，回家后即患脑溢血；此后长期卧床，再无学术新成果。1964年3月他因心脏病发作住院治疗，5月病逝，终年71岁。</p>
 <p>死后的汤用彤也没被中共放过。文革爆发后，他被扣上“资产阶级反动学术权威”的帽子。他的儿媳、汤一介妻子乐黛云，在某篇文章里写道：“我真是从心里庆幸他已于1964年离开这个他无法理解的世界。”的确，如果汤用彤活到文革，一定避免不了被红卫兵抄家、鞭打的厄运。</p>
 <p>而他的儿子、北大哲学系教授汤一介则被打成“走资派黑帮”，并被中止上课资格，除了要接受批斗，每天还要在校内劳动，或在广场上拔草，或清扫马路等。之后，他和乐黛云、儿子汤双，与北大两千余名员工一起，下放到江西鲤鱼洲五七干校劳动。</p>
 <p>1973年，汤一介加入“梁效”大批判组，他很卖力，其中的《林彪与孔孟之道》就是他和另一个学者周一良编写的。“紧跟”、“迎合”成为批评组成员唯一的选择。文革后，汤一介对自己的这段经历称“自己也不能原谅自己”，是以晚年“再不说那些违心的话”，试图“恢复知识分子应有的骨气”。</p>
@@ -45,49 +44,46 @@
 <p>可叹的是，曾经变成了法西斯集中营，变成了血腥暴徒们施虐场所的北京大学，迄今并没有深刻反思其这段见不得光的历史，原因也不难想像。而此时“政治挂帅”的北大除了名头外，还保留了多少民国时的风骨呢？还有多少教授敢于直言呢？校园里还有多少自由可言呢？说其今不如昔，一点也不为过的。一声长长的叹息！#</p>
 <p>责任编辑:莆山</p>
 <p>&nbsp;</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/3/12/n8902587.md#1">王友琴：六十三名受难者和北大文革（下）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/5/1/n7791814.md#1">傅国涌：未名湖畔的痛哭</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/3/16/n4663482.md#1">邓榕曾和李克强一同露面遭部分封杀的内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/1/28/n3496605.md#1">林辉：北大未名湖畔的冤魂知多少？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/1/18/n2790858.md#1">玉清心：北大未名湖畔 曾经的一家人</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/8/8/11/n2223721.md#1">伟大领袖打倒马寅初，是冤假错案吗？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/6/12/4/n1544285.md#1">邓朴方批文革 呼吁普及人道主义</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/5/8/12/n1016245.md#1">天川: 马寅初与毛泽东的人口之争</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/5/8/12/n1016245.md#1">天川: 马寅初与毛泽东的人口之争</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/12/4/n1544285.md#1">邓朴方批文革 呼吁普及人道主义</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/8/11/n2223721.md#1">伟大领袖打倒马寅初，是冤假错案吗？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/1/18/n2790858.md#1">玉清心：北大未名湖畔 曾经的一家人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/8/19/n10650677.md#1">林辉：开了北大自杀先例的史学教授</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/22/n10414742.md#1" target="_blank">共产暴政录：文革抄家抢了多少财宝</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257250.md#1" target="_blank">【征文】凌晓辉：贞洁论（五）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940988.md#1">【最新疫情3.15】美确诊3244例 美联储再降息</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938593.md#1">还原武汉肺炎中真实的钟南山</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939304.md#1">武汉失踪青年达数百人 警方不作为（上）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940633.md#1">【热点互动】中共甩锅美军 升级对美信息战？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/28/n10749135.htm">林辉：邓小平女儿指北大曾变成法西斯集中营</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/28/n10749135.htm">林辉：邓小平女儿指北大曾变成法西斯集中营</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/18/9/28/n10749135.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/9/28/n10749135.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
